# semchunk

./: .gitignore  .isort.cfg  CHANGELOG.md  LICENCE  README.md  pyproject.toml
.github/workflows/: ci.yml  conda.yml
src/semchunk/: __init__.py  semchunk.py
tests/: bench.py  helpers.py  test_semchunk.py
